<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Palle University</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="po_title">Looks like your user settings file corrupted in sd card, Please enter your email address for regenerating sd card user setting files.\n \nThis requires internet connection!</string>
    <!-- Avenues strings start -->
    <string name="access_code">Access Code</string>
    <string name="pay_button">Pay</string>
    <string name="merchant_id">Merchant Id</string>
    <string name="currency">Currency</string>
    <string name="amount">Amount</string>
    <string name="redirect_url">Redirect Url</string>
    <string name="cancel_url">Cancel Url</string>
    <string name="rsa_url">RSA Key Url</string>
    <string name="click_here">click here</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="recall">Recalled password?</string>
    <string name="login">login</string>
    <string name="here">here</string>
    <string name="terms">terms conditions</string>
    <string name="privacy">privacy policy</string>
    <string name="and">and</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_user">New User ?</string>
    <string name="signup">sign up</string>
    <!-- Avenues strings end -->
</resources>
