<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ems="10"
        android:layout_weight="1"
        android:hint="Enter email"
        android:paddingLeft="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        
        android:inputType="textPersonName" 
        android:background="@drawable/shape_edittext">

      
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="#ffffff"
         android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selecter"
        android:text="Retrieve Password" />
   <LinearLayout android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center" >
     <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        
        android:layout_height="wrap_content"
       
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/recall"
        android:textAppearance="?android:attr/textAppearanceMedium" />
      <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:autoLink="web"
        android:gravity="center"
        android:linksClickable="true"
        android:text="@string/login"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#0085b2" />
       <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        
        android:layout_height="wrap_content"
        
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/here"
        android:textAppearance="?android:attr/textAppearanceMedium" />
   </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Wait a moment..Fetching.."
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        android:textColor="#ffffff"
        android:background="#0000ff"
        android:gravity="center"
        android:id="@+id/textView8" />

    <LinearLayout  android:orientation="vertical"
        
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#003366"
        android:gravity="center"
        android:layout_weight="7">
   <!--  Palle Address  
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="#fff"
            android:gravity="center"
            android:text="Palle Technologies
No 15/6 old no 112/2,
Manish Complex,
Mangammana palya main road,
Bommanahalli,
Bangalore 560068
Karnataka,India
Email:info@techpalle.com
Tel : +91 80 41645630"
            android:textAppearance="?android:attr/textAppearanceLarge" />
            -->


    </LinearLayout>

</LinearLayout>

